fixed: text-align-> left

--- a/css/prova_1/exercicio_04/papers.css
+++ b/css/prova_1/exercicio_04/papers.css
@@ -21,7 +21,7 @@ p.resumo {
     font-size: 12pt;
     text-indent: 1cm;
     /*text-align: justify; ?*/
-    text-align: justify;
+    text-align: left;
 }
 
 p.title {
